--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/d7SRJVP" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO GANHAR DINHEIRO ASSISTINDO VIDEO!</span>
+                <span class="span-btn">QUERO GANHAR DINHEIRO ASSISTINDO VIDEOS!</span>
                 <span class="span-btn2">(atenção: vagas limitadas!)</span>
               </a>
             </div>
