--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1197433810827518');
+  fbq('init', 'MEUPIXEL');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1197433810827518&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id=MEUPIXEL&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 	
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Lucrando Com Insta - Oficial</title>
+    <title>Fábrica de PIX - Oficial</title>
     
     <style type="text/css">
       body {
@@ -58,7 +58,7 @@
           </p>
         </div>
             <!-- VSL -->
-            <script src="https://fast.wistia.com/embed/medias/mfx409rg97.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_mfx409rg97 videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/mfx409rg97/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
+            <script src="https://fast.wistia.com/embed/medias/rpih83m5k4.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_rpih83m5k4 videoFoam=true" style="height:100%;position:relative;width:100%"><div class="wistia_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"><img src="https://fast.wistia.com/embed/medias/rpih83m5k4/swatch" style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" alt="" aria-hidden="true" onload="this.parentNode.style.opacity=1;" /></div></div></div></div>
 
         <p align="center"/>
         <div align="center">      
@@ -68,8 +68,8 @@
            
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/8NcOYTz" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO GANHAR DINHEIRO COM INSTA!</span>
+              <a href="https://pay.kiwify.com.br/d7SRJVP" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO GANHAR PIX TODO DIA!</span>
                 <span class="span-btn2">(atenção: vagas limitadas!)</span>
               </a>
             </div>
@@ -93,7 +93,7 @@
     </header>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 710000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none")}, 605000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
