--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
               <p align="justify"/>
               <div align="justify">
-              <img class="img-fluid" src="./assets/img/head.jpg">
+              <img class="img-fluid" src="./assets/img/headline.jpg">
           </p>
         </div>
             <!-- VSL -->
