--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-PT">
 <head>
 	<meta charset="UTF-8">
-			<title>Página Principal &#8211; My Blog</title>
+			<title>Bug da Shein &#8211; - Oficial</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name='robots' content='max-image-preview:large' />
 <title>Página Principal &#8211; My Blog</title>
