--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				<div class="elementor-element elementor-element-990acdc elementor-align-center elementor-widget elementor-widget-button" data-id="990acdc" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://pay.kiwify.com.br/EoEySOn?afid=BeGhjgu8" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-shrink" role="button">
+			<a href="https://pay.kiwify.com.br/spDlF17" class="elementor-button-link elementor-button elementor-size-sm elementor-animation-shrink" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">QUERO APRENDER A TER  ROUPAS DE GRAÇA NA SHEIN!</span>
 		</span>
