--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-b94fcb6 esconder elementor-widget elementor-widget-image" data-id="b94fcb6" data-element_type="widget" data-settings="{" _animation_mobile":"flash"}" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-																<a href="https://pay.kiwify.com.br/GsYyQYE">
+																<a href="https://checkout.mycheckout.com.br/checkout/633d9cb32377a448d6455ddb">
 							<img width="1940" height="600" src="images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts.webp" class="attachment-full size-full" alt loading="lazy" srcset="images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts.webp 1940w, images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts-300x93.webp 300w, images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts-1024x317.webp 1024w, images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts-768x238.webp 768w, images/BOTAO-NOVO-min-pto17b6becirsxkaz64a84gfwh6rbgp03i627ykkts-1536x475.webp 1536w" sizes="(max-width: 1940px) 100vw, 1940px">								</a>
 															</div>
 				</div>
