--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-		<title>TikTok Milionário - Oficial</title>
+		<title>App Licenciado - TikTok Milionário</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//s.w.org">
 <link rel="alternate" type="application/rss+xml" title="Feed para Área da Mulher »" href="https://www.areadamulher.com.br/feed/">
@@ -55,10 +55,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '1197433810827518');
+  fbq('init', '5649357328465962');
   fbq('track', 'PageView');
 </script>
-<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1197433810827518&amp;ev=PageView&amp;noscript=1"></noscript>
+<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=5649357328465962&amp;ev=PageView&amp;noscript=1"></noscript>
 <!-- End Meta Pixel Code -->
 <!-- Meta Pixel Code -->
 <script>
