--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 														</span>
 												<a class="elementor-accordion-title" href>O que acontece se eu me arrepender da compra do programa?</a>
 					</div>
-					<div id="elementor-tab-content-2103" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-2103"><p>Caso você se arrependa da aquisição do APP TIKTOK PAY e queria desistir dele, basta entrar em contato com nossa equipe de atendimento, que todos os passos para o cancelamento e a devolução do dinheiro investido lhe serão fornecidos.</p></div>
+					<div id="elementor-tab-content-2103" class="elementor-tab-content elementor-clearfix" data-tab="3" role="tabpanel" aria-labelledby="elementor-tab-title-2103"><p>Caso você se arrependa da aquisição do Sistema Netflix e queria desistir dele, basta entrar em contato com nossa equipe de atendimento, que todos os passos para o cancelamento e a devolução do dinheiro investido lhe serão fornecidos.</p></div>
 				</div>
 								</div>
 				</div>
