--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ fbq('track', 'PageView');
 				</div>
 				<div class="elementor-element elementor-element-5f7120fd elementor-widget elementor-widget-heading" data-id="5f7120fd" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<p class="elementor-heading-title elementor-size-default">Cara, porque não divulgaram isso antes? me tiraram de um aperto enorme, muito obrigado 🥺
+			<p class="elementor-heading-title elementor-size-default">Gente, porque não divulgaram isso antes? me tiraram de um aperto enorme, muito obrigado 🥺
 </p>		</div>
 				</div>
 				<div class="elementor-element elementor-element-504ea6de elementor-widget elementor-widget-text-editor" data-id="504ea6de" data-element_type="widget" data-widget_type="text-editor.default">
